Major cleanup: Tavily-only search, prompt tracing, organized logs & docs
This commit consolidates multiple improvements into a clean, production-ready state.

## Documentation Restructuring
- Deleted: QUICKSTART.md, ARCHITECTURE.md, IMPLEMENTATION_SUMMARY.md
- Created: docs/GUIDE.md (comprehensive setup + architecture + usage guide)
- Updated: README.md (concise, current, references GUIDE.md)

## Search API Simplification (Tavily-only)
- Simplified search_client.py by removing DuckDuckGo, Google Custom Search, Serper API support
- Kept: Tavily AI (AI-optimized search for LLMs)
- Removed: Unused dependencies, config options, documentation

## Prompt Tracing (Production-ready debugging)
Added comprehensive LLM prompt tracing to all agents:
- agents/intent_classifier.py
- agents/research_agent.py (query generation + company extraction)
- agents/enrichment_agent.py
- agents/scoring_agent.py (customer + partner)

Tracing captures:
- All prompts sent to LLM
- All responses received
- Metadata (company names, discovery type, etc.)
- Errors with full context

Logs stored: data/prompt_logs/session_YYYYMMDD_HHMMSS.jsonl

--- a/.env.example
+++ b/.env.example
@@ -7,28 +7,11 @@ OLLAMA_MODEL=llama3.1:8b  # or mistral:7b, mixtral:8x7b
 HUGGINGFACE_API_TOKEN=your_token_here
 HUGGINGFACE_MODEL=mistralai/Mistral-7B-Instruct-v0.2
 
-# Search Provider Selection
-# Choose: duckduckgo (free but unreliable), serper (recommended), tavily, google
-SEARCH_PROVIDER=duckduckgo
-
-# Search API Keys (choose one based on SEARCH_PROVIDER above)
-
-# Serper API - RECOMMENDED for prototypes
-# Free: $50 credit = 20,000 searches
-# Sign up: https://serper.dev
-SERPER_API_KEY=your_serper_key_here
-
-# Tavily AI Search - Good for LLM applications
-# Free: 1,000 searches/month
+# Search API Configuration
+# Tavily AI Search - AI-optimized search for LLM applications
+# Free tier: 1,000 searches/month
 # Sign up: https://tavily.com
 TAVILY_API_KEY=your_tavily_key_here
-
-# Google Custom Search API - Official Google
-# Free: 100 searches/day (3,000/month)
-# Setup: https://console.cloud.google.com/apis/credentials
-# Create CSE: https://programmablesearchengine.google.com/
-GOOGLE_API_KEY=your_google_api_key
-GOOGLE_CSE_ID=your_custom_search_engine_id
 
 # Prompt Tracing
 LANGFUSE_PUBLIC_KEY=your_public_key
