Update documentation and config to use Mistral 7B as primary model
Changes:

- Updated .md files to reflect the accurate LLM used i.e., mistral:7b
- Updated setup.sh to use mistral:7b in instructions
- Simplified .env.example
- Added latest results: data/results_cache/both_20251213_174500.json

Rationale: Documentation should match actual usage (mistral:7b).
Mistral 7B provides better JSON compliance and faster inference than Llama 3.1 8B model.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # LLM Configuration
 # Option 1: Ollama (Local - recommended)
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=llama3.1:8b  # or mistral:7b, mixtral:8x7b
+OLLAMA_MODEL=mistral:7b  # or llama3.1:8b, mixtral:8x7b
 
 # Option 2: HuggingFace (if using HF Inference API)
 HUGGINGFACE_API_TOKEN=your_token_here
